<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MenuActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/up_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/up_image_vie" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.NoActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_menu" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar_bottom"
        android:layout_width="match_parent"
        style="@style/Theme.AppCompat"
        android:background="@color/colorPrimary"
        android:layout_height="@dimen/app_bar_bottom_height"
        android:layout_gravity="bottom|end">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/total_quantity"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/_0"
                    android:id="@+id/quantity"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/total_amount"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/_0"
                    android:id="@+id/amount"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_gravity="center"
                android:layout_marginStart="200dp"
                android:text="@string/cart"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_marginEnd="20dp"
                android:id="@+id/checkout"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/next_image_view" />

        </android.support.design.widget.CoordinatorLayout>

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.CoordinatorLayout>