<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/restaurant_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:alpha="0.8"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@color/colorPrimary"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/cv_img"
                    android:contentDescription="@string/logo" />

                <TextView
                    android:id="@+id/menu_name"
                    android:textSize="20sp"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:layout_width="150dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="end">

                    <Button
                        android:text="@string/minus"
                        android:id="@+id/minus"
                        android:textColor="@color/white"
                        android:elevation="2dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="30dp"
                        android:layout_height="40dp" />

                    <TextView
                        android:text="@string/plus_one"
                        android:layout_margin="7dp"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:text="@string/plus"
                        android:id="@+id/plus"
                        android:textColor="@color/white"
                        android:elevation="2dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="30dp"
                        android:layout_height="40dp" />

                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_desc"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/menu_price"
                    android:textSize="20sp"
                    android:layout_gravity="end"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp" />

            </android.support.design.widget.CoordinatorLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
